tests/invalid/Cast_Invalid_1.whiley
type R1 is {real x}

function f(real i) -> int:
    return (int) i
